Revision history for {{$dist->name}}

{{$NEXT}}

0.77_02   2019-01-29 11:30:56 -0500
  - Fix regressions in 0.77_01

0.77_01   2019-01-28 15:47:07 -0500
  - Honor compiler and linker flag overrides provided on the command-line
    for FFI::Probe::Runner::Builder, make ffi and make ffi-test (gh#104)

0.76_01   2019-01-20 20:14:45 -0500
  - function method can now take a wrapper code reference as its last
    argument in the same way as attach.

0.75_01   2019-01-19 04:45:19 -0500
  - Add strndup to FFI::Platypus::Memory

0.74      2019-01-19 04:42:22 -0500
  - Production release identical to 0.73_01

0.73_01   2019-01-13 18:31:33 -0500
  - Remove dependency on Win32::ErrorMode on Windows

0.72_01   2019-01-11 22:17:11 -0500
  - Remove dependency on Config::AutoConf

0.71_01   2019-01-10 23:29:06 -0500
  - Merge FFI-Build into this distribution
  - Add FFI::Probe

0.70_01   2019-01-10 15:34:57 -0500
  - prereq fix: IPC::Cmd as a configure requires
    since it doesn't come with Perl 5.8.x

0.69_01   2019-01-09 15:59:43 -0500
  - require Alien::FFI in fallback mode

0.68_01   2019-01-05 21:12:47 -0500
  - Improve platform probing of complex type
  - Allow override of platform probing using FFI_PLATYPUS_PROBE_OVERRIDE

0.67_01   2019-01-05 09:16:22 -0500
  - Better support for complex types: pointers to complex types and complex
    type and pointers to complex as return value

0.66_01   2019-01-04 20:16:59 -0500
  - EXPERIMENTAL ExtUtils::MakeMaker fixes for dynamic prereqs on windows
  - restore FFI_PLATYPUS_DEBUG_FAKE32
  - restore FFI_PLATYPUS_NO_ALLOCA

0.65_01   2019-01-04 13:38:58 -0500
  - EXPERIMENTAL ExtUtils::MakeMaker fixes for parallel and freebsd build

0.64_01   2019-01-03 03:16:57 -0500
  - EXPERIMENTAL ExtUtils::MakeMaker fixes for MSWin32 / cygwin

0.63_01   2019-01-02 11:23:48 -0500
  - EXPERIMENTAL ExtUtils::MakeMaker release

0.62_01   2019-01-01 04:23:23 -0500
  - New type: array of string "string [x]" and "string []" are supported