@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove Java gcj examples.  The gcj compiler has been deprecated,
+    unmaintained, and removed from the gcc collection for quite a while
+    now.
 
 0.77_02   2019-01-29 11:30:56 -0500
   - Fix regressions in 0.77_01
